Update instructions for JDK 25 support